Src/Main/DevToolsX.Documents.Compilers/MediaWiki/Syntax/InternalSyntax/MediaWikiParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from MediaWikiParser.g4 by ANTLR 4.7

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace DevToolsX.Documents.Compilers.MediaWiki.Syntax.InternalSyntax {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7")]
[System.CLSCompliant(false)]
public partial class MediaWikiParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		THorizontalLine=1, THeading=2, TDefinitionStart=3, TListStart=4, TSpaceBlockStart=5, 
		TTableStart=6, TFormat=7, TLinkStart=8, TExternalLinkStart=9, TTemplateParamStart=10, 
		TTemplateStart=11, THtmlComment=12, TNoWiki=13, THtmlScript=14, THtmlStyle=15, 
		TEndTagStart=16, TTagStart=17, TNormalText=18, TComma=19, TWhiteSpace=20, 
		UTF8BOM=21, CRLF=22, TBar=23, TExclamation=24, TApos=25, TSpecialChars=26, 
		TLinkEnd=27, TExternalLinkEnd=28, TTemplateParamEnd=29, TTemplateEnd=30, 
		TBarBar=31, TExclExcl=32, TColon=33, TEntityRef=34, TCharRef=35, TTagEnd=36, 
		TTagCloseEnd=37, TAttributeEquals=38, TTagName=39, TAttributeValue=40, 
		TEndTagEnd=41, TTableEnd=42, TTableCaptionStart=43, TTableRowStart=44, 
		TTextLine_RefStart=45;
	public const int
		RULE_main = 0, RULE_specialBlockOrParagraph = 1, RULE_specialBlockWithComment = 2, 
		RULE_specialBlock = 3, RULE_heading = 4, RULE_headingLevel = 5, RULE_horizontalRule = 6, 
		RULE_codeBlock = 7, RULE_spaceBlock = 8, RULE_wikiList = 9, RULE_listItem = 10, 
		RULE_normalListItem = 11, RULE_definitionItem = 12, RULE_wikiTable = 13, 
		RULE_tableCaption = 14, RULE_tableRows = 15, RULE_tableFirstRow = 16, 
		RULE_tableNonFirstRow = 17, RULE_tableRowStart = 18, RULE_tableRow = 19, 
		RULE_tableColumn = 20, RULE_tableSingleHeaderCell = 21, RULE_tableHeaderCells = 22, 
		RULE_tableSingleCell = 23, RULE_tableCells = 24, RULE_tableCell = 25, 
		RULE_cellAttributes = 26, RULE_paragraph = 27, RULE_textLine = 28, RULE_textElements = 29, 
		RULE_inlineText = 30, RULE_inlineTextElementWithComment = 31, RULE_inlineTextElement = 32, 
		RULE_inlineTextElements = 33, RULE_definitionText = 34, RULE_definitionTextElementWithComment = 35, 
		RULE_definitionTextElement = 36, RULE_definitionTextElements = 37, RULE_headingText = 38, 
		RULE_headingTextWithComment = 39, RULE_headingTextElement = 40, RULE_headingTextElements = 41, 
		RULE_cellText = 42, RULE_cellTextElementWithComment = 43, RULE_cellTextElement = 44, 
		RULE_cellTextElements = 45, RULE_linkText = 46, RULE_linkTextWithComment = 47, 
		RULE_linkTextElement = 48, RULE_linkTextElements = 49, RULE_wikiFormat = 50, 
		RULE_wikiLink = 51, RULE_wikiInternalLink = 52, RULE_wikiExternalLink = 53, 
		RULE_wikiTemplate = 54, RULE_wikiTemplateParam = 55, RULE_noWiki = 56, 
		RULE_barOrBarBar = 57, RULE_linkTextPart = 58, RULE_htmlReference = 59, 
		RULE_htmlCommentList = 60, RULE_htmlComment = 61, RULE_htmlStyle = 62, 
		RULE_htmlScript = 63, RULE_htmlTag = 64, RULE_htmlTagOpen = 65, RULE_htmlTagClose = 66, 
		RULE_htmlTagEmpty = 67, RULE_htmlAttribute = 68, RULE_htmlAttributeName = 69, 
		RULE_htmlAttributeValue = 70, RULE_htmlTagName = 71, RULE_whitespaceList = 72, 
		RULE_whitespace = 73;
	public static readonly string[] ruleNames = {
		"main", "specialBlockOrParagraph", "specialBlockWithComment", "specialBlock", 
		"heading", "headingLevel", "horizontalRule", "codeBlock", "spaceBlock", 
		"wikiList", "listItem", "normalListItem", "definitionItem", "wikiTable", 
		"tableCaption", "tableRows", "tableFirstRow", "tableNonFirstRow", "tableRowStart", 
		"tableRow", "tableColumn", "tableSingleHeaderCell", "tableHeaderCells", 
		"tableSingleCell", "tableCells", "tableCell", "cellAttributes", "paragraph", 
		"textLine", "textElements", "inlineText", "inlineTextElementWithComment", 
		"inlineTextElement", "inlineTextElements", "definitionText", "definitionTextElementWithComment", 
		"definitionTextElement", "definitionTextElements", "headingText", "headingTextWithComment", 
		"headingTextElement", "headingTextElements", "cellText", "cellTextElementWithComment", 
		"cellTextElement", "cellTextElements", "linkText", "linkTextWithComment", 
		"linkTextElement", "linkTextElements", "wikiFormat", "wikiLink", "wikiInternalLink", 
		"wikiExternalLink", "wikiTemplate", "wikiTemplateParam", "noWiki", "barOrBarBar", 
		"linkTextPart", "htmlReference", "htmlCommentList", "htmlComment", "htmlStyle", 
		"htmlScript", "htmlTag", "htmlTagOpen", "htmlTagClose", "htmlTagEmpty", 
		"htmlAttribute", "htmlAttributeName", "htmlAttributeValue", "htmlTagName", 
		"whitespaceList", "whitespace"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, "' '", null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"'!'", null, null, "']]'", "']'", "'}}}'", "'}}'", "'||'", "'!!'", "':'", 
		null, null, null, "'/>'", "'='", null, null, null, "'|}'", "'|+'", "'|-'", 
		"'&'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "THorizontalLine", "THeading", "TDefinitionStart", "TListStart", 
		"TSpaceBlockStart", "TTableStart", "TFormat", "TLinkStart", "TExternalLinkStart", 
		"TTemplateParamStart", "TTemplateStart", "THtmlComment", "TNoWiki", "THtmlScript", 
		"THtmlStyle", "TEndTagStart", "TTagStart", "TNormalText", "TComma", "TWhiteSpace", 
		"UTF8BOM", "CRLF", "TBar", "TExclamation", "TApos", "TSpecialChars", "TLinkEnd", 
		"TExternalLinkEnd", "TTemplateParamEnd", "TTemplateEnd", "TBarBar", "TExclExcl", 
		"TColon", "TEntityRef", "TCharRef", "TTagEnd", "TTagCloseEnd", "TAttributeEquals", 
		"TTagName", "TAttributeValue", "TEndTagEnd", "TTableEnd", "TTableCaptionStart", 
		"TTableRowStart", "TTextLine_RefStart"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MediaWikiParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static MediaWikiParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}


	    bool isSpecialToken() {
	    	String name = this.CurrentToken.Text;
	    	if (name == " " || name.StartsWith("-") || name.StartsWith("=") || name.StartsWith("#") ||
	    	    name.StartsWith("*") || name.StartsWith(":") || name.StartsWith(";") || name.StartsWith("{|") ||
	    	    name.StartsWith("|+") || name.StartsWith("|-") || name.StartsWith("|}") || name.StartsWith("|") ||
	    	    name.StartsWith("!")) return true;
	        return false;
	    }

		public MediaWikiParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public MediaWikiParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class MainContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(MediaWikiParser.Eof, 0); }
		public SpecialBlockOrParagraphContext[] specialBlockOrParagraph() {
			return GetRuleContexts<SpecialBlockOrParagraphContext>();
		}
		public SpecialBlockOrParagraphContext specialBlockOrParagraph(int i) {
			return GetRuleContext<SpecialBlockOrParagraphContext>(i);
		}
		public MainContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_main; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMediaWikiParserListener typedListener = listener as IMediaWikiParserListener;
			if (typedListener != null) typedListener.EnterMain(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMediaWikiParserListener typedListener = listener as IMediaWikiParserListener;
			if (typedListener != null) typedListener.ExitMain(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMediaWikiParserVisitor<TResult> typedVisitor = visitor as IMediaWikiParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMain(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MainContext main() {
		MainContext _localctx = new MainContext(Context, State);
		EnterRule(_localctx, 0, RULE_main);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 151;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 148; specialBlockOrParagraph();
					}
					} 
				}
				State = 153;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			}
			State = 154; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SpecialBlockOrParagraphContext : ParserRuleContext {
		public SpecialBlockWithCommentContext specialBlockWithComment() {
			return GetRuleContext<SpecialBlockWithCommentContext>(0);
		}
		public ParagraphContext paragraph() {
			return GetRuleContext<ParagraphContext>(0);
		}
		public SpecialBlockOrParagraphContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_specialBlockOrParagraph; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMediaWikiParserListener typedListener = listener as IMediaWikiParserListener;
			if (typedListener != null) typedListener.EnterSpecialBlockOrParagraph(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMediaWikiParserListener typedListener = listener as IMediaWikiParserListener;
			if (typedListener != null) typedListener.ExitSpecialBlockOrParagraph(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMediaWikiParserVisitor<TResult> typedVisitor = visitor as IMediaWikiParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSpecialBlockOrParagraph(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SpecialBlockOrParagraphContext specialBlockOrParagraph() {
		SpecialBlockOrParagraphContext _localctx = new SpecialBlockOrParagraphContext(Context, State);
		EnterRule(_localctx, 2, RULE_specialBlockOrParagraph);
		try {
			State = 158;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 156; specialBlockWithComment();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 157; paragraph();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SpecialBlockWithCommentContext : ParserRuleContext {
		public HtmlCommentListContext leadingComment;
		public HtmlCommentListContext trailingComment;
		public SpecialBlockContext specialBlock() {
			return GetRuleContext<SpecialBlockContext>(0);
		}
		public ITerminalNode CRLF() { return GetToken(MediaWikiParser.CRLF, 0); }
		public HtmlCommentListContext[] htmlCommentList() {
			return GetRuleContexts<HtmlCommentListContext>();
		}
		public HtmlCommentListContext htmlCommentList(int i) {
			return GetRuleContext<HtmlCommentListContext>(i);
		}
		public SpecialBlockWithCommentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_specialBlockWithComment; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMediaWikiParserListener typedListener = listener as IMediaWikiParserListener;
			if (typedListener != null) typedListener.EnterSpecialBlockWithComment(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMediaWikiParserListener typedListener = listener as IMediaWikiParserListener;
			if (typedListener != null) typedListener.ExitSpecialBlockWithComment(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMediaWikiParserVisitor<TResult> typedVisitor = visitor as IMediaWikiParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSpecialBlockWithComment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SpecialBlockWithCommentContext specialBlockWithComment() {
		SpecialBlockWithCommentContext _localctx = new SpecialBlockWithCommentContext(Context, State);
		EnterRule(_localctx, 4, RULE_specialBlockWithComment);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 160; _localctx.leadingComment = htmlCommentList();
			State = 161;
			if (!(isSpecialToken())) throw new FailedPredicateException(this, "isSpecialToken()");
			State = 162; specialBlock();
			State = 163; _localctx.trailingComment = htmlCommentList();
			State = 164; Match(CRLF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SpecialBlockContext : ParserRuleContext {
		public HeadingContext heading() {
			return GetRuleContext<HeadingContext>(0);
		}
		public HorizontalRuleContext horizontalRule() {
			return GetRuleContext<HorizontalRuleContext>(0);
		}
		public CodeBlockContext codeBlock() {
			return GetRuleContext<CodeBlockContext>(0);
		}
		public WikiListContext wikiList() {
			return GetRuleContext<WikiListContext>(0);
		}
		public WikiTableContext wikiTable() {
			return GetRuleContext<WikiTableContext>(0);
		}
		public SpecialBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_specialBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMediaWikiParserListener typedListener = listener as IMediaWikiParserListener;
			if (typedListener != null) typedListener.EnterSpecialBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMediaWikiParserListener typedListener = listener as IMediaWikiParserListener;
			if (typedListener != null) typedListener.ExitSpecialBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMediaWikiParserVisitor<TResult> typedVisitor = visitor as IMediaWikiParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSpecialBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SpecialBlockContext specialBlock() {
		SpecialBlockContext _localctx = new SpecialBlockContext(Context, State);
		EnterRule(_localctx, 6, RULE_specialBlock);
		try {
			State = 171;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case THeading:
				EnterOuterAlt(_localctx, 1);
				{
				State = 166; heading();
				}
				break;
			case THorizontalLine:
				EnterOuterAlt(_localctx, 2);
				{
				State = 167; horizontalRule();
				}
				break;
			case TSpaceBlockStart:
				EnterOuterAlt(_localctx, 3);
				{
				State = 168; codeBlock();
				}
				break;
			case TDefinitionStart:
			case TListStart:
				EnterOuterAlt(_localctx, 4);
				{
				State = 169; wikiList();
				}
				break;
			case TTableStart:
				EnterOuterAlt(_localctx, 5);
				{
				State = 170; wikiTable();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HeadingContext : ParserRuleContext {
		public HeadingLevelContext headingStart;
		public HeadingLevelContext headingEnd;
		public HeadingLevelContext[] headingLevel() {
			return GetRuleContexts<HeadingLevelContext>();
		}
		public HeadingLevelContext headingLevel(int i) {
			return GetRuleContext<HeadingLevelContext>(i);
		}
		public HeadingTextContext headingText() {
			return GetRuleContext<HeadingTextContext>(0);
		}
		public InlineTextContext inlineText() {
			return GetRuleContext<InlineTextContext>(0);
		}
		public HeadingContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_heading; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMediaWikiParserListener typedListener = listener as IMediaWikiParserListener;
			if (typedListener != null) typedListener.EnterHeading(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMediaWikiParserListener typedListener = listener as IMediaWikiParserListener;
			if (typedListener != null) typedListener.ExitHeading(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMediaWikiParserVisitor<TResult> typedVisitor = visitor as IMediaWikiParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitHeading(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public HeadingContext heading() {
		HeadingContext _localctx = new HeadingContext(Context, State);
		EnterRule(_localctx, 8, RULE_heading);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 173; _localctx.headingStart = headingLevel();
			State = 177;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				{
				State = 174; headingText();
				State = 175; _localctx.headingEnd = headingLevel();
				}
				break;
			}
			State = 180;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				{
				State = 179; inlineText();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HeadingLevelContext : ParserRuleContext {
		public ITerminalNode THeading() { return GetToken(MediaWikiParser.THeading, 0); }
		public HeadingLevelContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_headingLevel; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMediaWikiParserListener typedListener = listener as IMediaWikiParserListener;
			if (typedListener != null) typedListener.EnterHeadingLevel(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMediaWikiParserListener typedListener = listener as IMediaWikiParserListener;
			if (typedListener != null) typedListener.ExitHeadingLevel(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMediaWikiParserVisitor<TResult> typedVisitor = visitor as IMediaWikiParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitHeadingLevel(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public HeadingLevelContext headingLevel() {
		HeadingLevelContext _localctx = new HeadingLevelContext(Context, State);
		EnterRule(_localctx, 10, RULE_headingLevel);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 182; Match(THeading);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HorizontalRuleContext : ParserRuleContext {
		public ITerminalNode THorizontalLine() { return GetToken(MediaWikiParser.THorizontalLine, 0); }
		public InlineTextContext inlineText() {
			return GetRuleContext<InlineTextContext>(0);
		}
		public HorizontalRuleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_horizontalRule; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMediaWikiParserListener typedListener = listener as IMediaWikiParserListener;
			if (typedListener != null) typedListener.EnterHorizontalRule(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMediaWikiParserListener typedListener = listener as IMediaWikiParserListener;
			if (typedListener != null) typedListener.ExitHorizontalRule(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMediaWikiParserVisitor<TResult> typedVisitor = visitor as IMediaWikiParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitHorizontalRule(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public HorizontalRuleContext horizontalRule() {
		HorizontalRuleContext _localctx = new HorizontalRuleContext(Context, State);
		EnterRule(_localctx, 12, RULE_horizontalRule);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 184; Match(THorizontalLine);
			State = 186;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				{
				State = 185; inlineText();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CodeBlockContext : ParserRuleContext {
		public SpaceBlockContext[] spaceBlock() {
			return GetRuleContexts<SpaceBlockContext>();
		}
		public SpaceBlockContext spaceBlock(int i) {
			return GetRuleContext<SpaceBlockContext>(i);
		}
		public ITerminalNode[] CRLF() { return GetTokens(MediaWikiParser.CRLF); }
		public ITerminalNode CRLF(int i) {
			return GetToken(MediaWikiParser.CRLF, i);
		}
		public CodeBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_codeBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMediaWikiParserListener typedListener = listener as IMediaWikiParserListener;
			if (typedListener != null) typedListener.EnterCodeBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMediaWikiParserListener typedListener = listener as IMediaWikiParserListener;
			if (typedListener != null) typedListener.ExitCodeBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMediaWikiParserVisitor<TResult> typedVisitor = visitor as IMediaWikiParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCodeBlock(this);
			else return visitor.VisitChildren(this);
		}
	}
